--- a/assets/app/home/home.component.html
+++ b/assets/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="row">
     <div class="col-md-6 col-md-offset-3 text-center">
         <div *ngIf='!isSearching' @searchState>
@@ -27,7 +28,7 @@
 
 
 <div *ngIf='bars'>
-    <div class="row list" *ngFor='let result of bars; let i=index' @searchState>
+    <div class="row list" *ngFor='let result of _appService.resultsSave; let i=index' @displaysearchState>
         <hr />
         <div class="col-md-2 col-md-offset-2">
             <img [src]="result?.image_url" class="img-thumbnail img-response" width='165' height='165' style="max-height:165px; max-width: 165px">
@@ -35,7 +36,7 @@
         </div>
         <div class="col-md-6">
             <h3 [innerText]='result?.name' class='bar_title'></h3>
-            <span class='pull-right bookmark_icon' bookmark (click)='onBookMark(result)'><i class="fa fa-bookmark fa-3x" aria-hidden="true"></i></span>
+            <span class='pull-right bookmark_icon' *ngIf='_appService.isAuthenticated' bookmark (click)='onBookMark(result)'><i class="fa fa-bookmark fa-3x" aria-hidden="true"></i></span>
             <p><i>Rating:</i> {{result.rating}} <i style='color: yellow' class="fa fa-star" aria-hidden="true"></i> </p>
             <p><i>Address:</i></p>
             <ul *ngIf='result?.location.display_address'>
