--- a/assets/app/navbar/navbar.component.html
+++ b/assets/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-      <a class="navbar-brand" href="">Voting Polls</a>
+      <a class="navbar-brand">Voting Polls</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -30,7 +30,7 @@
 
         <ng-template #authenticate>
           <li><a>Hello: {{ getUsername() }}</a></li>
-          <li ><a (click)="onLogOut()" [routerLink]="">Logout</a></li>
+          <li ><a (click)="onLogOut()">Logout</a></li>
         </ng-template>
       </ul>
 
